fixed header logo bug (z-index)

--- a/header/header.css
+++ b/header/header.css
@@ -8,6 +8,7 @@ header {
     position: absolute;
     right: 1%;
     top: 5%;
+    z-index: 5;
 }
 
 #presented-by {
